k8s/apps/media/bazarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr-ingress
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`subtitles.media.armleth.fr`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      priority: 15
      services:
        - name: authentik-server
          namespace: authentik
          port: 80
    - match: Host(`subtitles.media.armleth.fr`)
      kind: Rule
      priority: 10
      services:
        - name: bazarr-service
          port: 6767
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
        - name: arr-local-client-ip
  tls:
    secretName: bazarr-tls-secret
